--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,11 @@ server {
     server_name 43.201.100.92;
 
     location / {
-        include uwsgi_params;
-        uwsgi_pass unix:/tmp/uwsgi.sock;
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /static/ {
