--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=aurora-cluster.cluster-ch6oycw4ehe0.ap-northeast-2.rds.amazonaws.com
+DB_HOST=1
 DB_USER=admin
 DB_PASSWORD=11111111
 DB_NAME=aurora-cluster
