--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,23 +1,61 @@
+astroid==3.1.0
+bidict==0.23.1
+black==24.4.0
 blinker==1.7.0
+boto3==1.34.156
+botocore==1.34.156
 cachelib==0.13.0
 certifi==2024.2.2
+cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+cs50==9.3.4
+dill==0.3.8
+dnspython==2.6.1
+eventlet==0.36.1
 Flask==3.0.3
-Flask-SocketIO==5.3.3
 Flask-Session==0.8.0
+Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
+gevent==24.2.1
+gevent-websocket==0.10.1
 greenlet==3.0.3
+h11==0.14.0
 idna==3.7
+isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jmespath==1.0.1
 MarkupSafe==2.1.5
+mccabe==0.7.0
+msgspec==0.18.6
+mypy==1.9.0
+mypy-extensions==1.0.0
+mysqlclient==2.2.4
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
+pycodestyle==2.11.1
+pycparser==2.22
+pylint==3.1.0
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.3
 pytz==2024.1
 requests==2.31.0
+s3transfer==0.10.2
+simple-websocket==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.29
 sqlparse==0.5.0
+termcolor==2.4.0
+tomlkit==0.12.4
+typing_extensions==4.11.0
 urllib3==2.2.1
-uWSGI==2.0.20
 Werkzeug==3.0.2
-mysqldb
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.0.1
