--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name 43.201.100.92;
+    server_name localhost;
 
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://web:8000;  # Flask 애플리케이션에 프록시
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -11,6 +11,6 @@ server {
     }
 
     location /static/ {
-        alias /home/ubuntu/baggu-ec2/flask/static/;
+        alias /home/ubuntu/baggu-ec2-main/flask/static/;
     }
 }
