--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,34 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 3.36.74.96;  # EC2의 퍼블릭 IP 또는 도메인
 
-    location / {
-        proxy_pass http://web:8000;  # Flask 애플리케이션에 프록시
+    location /socket.io/ {
+        proxy_pass http://web:8000/socket.io/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;  # WebSocket 통신에 필요할 수 있습니다.
+    }
+
+    location / {
+        proxy_pass http://web:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
     }
 
     location /static/ {
-        alias /home/ubuntu/baggu-ec2-main/flask/static/;
+        alias /app/static/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 }
