--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,61 +1,85 @@
-astroid==3.1.0
+attrs==21.2.0
+Automat==20.2.0
+Babel==2.8.0
+bcrypt==3.2.0
 bidict==0.23.1
-black==24.4.0
-blinker==1.7.0
-boto3==1.34.156
-botocore==1.34.156
-cachelib==0.13.0
-certifi==2024.2.2
-cffi==1.17.0
-charset-normalizer==3.3.2
+blinker==1.8.2
+certifi==2020.6.20
+chardet==4.0.0
 click==8.1.7
-colorama==0.4.6
-cs50==9.3.4
-dill==0.3.8
-dnspython==2.6.1
-eventlet==0.36.1
+cloud-init==24.1.3
+colorama==0.4.4
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+ec2-hibinit-agent==1.0.0
 Flask==3.0.3
-Flask-Session==0.8.0
 Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-gevent==24.2.1
-gevent-websocket==0.10.1
-greenlet==3.0.3
 h11==0.14.0
-idna==3.7
-isort==5.13.2
-itsdangerous==2.1.2
-Jinja2==3.1.3
-jmespath==1.0.1
+hibagent==1.0.1
+httplib2==0.20.2
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==4.6.4
+incremental==21.3.0
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.4
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 MarkupSafe==2.1.5
-mccabe==0.7.0
-msgspec==0.18.6
-mypy==1.9.0
-mypy-extensions==1.0.0
-mysqlclient==2.2.4
-packaging==24.0
-pathspec==0.12.1
-platformdirs==4.2.0
-pycodestyle==2.11.1
-pycparser==2.22
-pylint==3.1.0
-PyMySQL==1.1.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+pexpect==4.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+PyJWT==2.3.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.4.0+ubuntu3
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==0.19.2
 python-engineio==4.9.1
+python-magic==0.4.24
 python-socketio==5.11.3
-pytz==2024.1
-requests==2.31.0
-s3transfer==0.10.2
+pytz==2022.1
+PyYAML==5.4.1
+requests==2.25.1
+SecretStorage==3.3.1
+service-identity==18.1.0
 simple-websocket==1.0.0
 six==1.16.0
-SQLAlchemy==2.0.29
-sqlparse==0.5.0
-termcolor==2.4.0
-tomlkit==0.12.4
-typing_extensions==4.11.0
-urllib3==2.2.1
-Werkzeug==3.0.2
+sos==4.5.6
+ssh-import-id==5.11
+systemd-python==234
+texttable==1.6.4
+Twisted==22.1.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+wadllib==1.3.6
+websocket-client==1.2.3
+Werkzeug==3.0.3
 wsproto==1.2.0
-zope.event==5.0
-zope.interface==7.0.1
+zipp==1.0.0
+zope.interface==5.4.0
