--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,13 @@
+upstream web_backend {
+    server web:8000;  # web 서비스가 실행되는 Docker Compose 네트워크에서의 이름과 포트
+}
+
 server {
     listen 80;
-    server_name 3.36.74.96;  # EC2의 퍼블릭 IP 또는 도메인
+    server_name localhost;  # EC2의 퍼블릭 IP 또는 도메인
 
     location /socket.io/ {
-        proxy_pass http://web:8000/socket.io/;
+        proxy_pass http://web_backend/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -11,11 +15,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_buffering off;  # WebSocket 통신에 필요할 수 있습니다.
+        proxy_buffering off;
     }
 
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://web_backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
