--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -3,6 +3,14 @@ FROM python:3.9
 # 최신 pip로 업그레이드
 RUN python -m pip install --upgrade pip
 
+# 시스템 의존성 설치
+RUN apt-get update && apt-get install -y \
+    libdbus-1-dev \
+    libgirepository1.0-dev \
+    build-essential \
+    pkg-config \
+    && rm -rf /var/lib/apt/lists/*
+
 # 작업 디렉토리 설정
 WORKDIR /app
 
