--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -7,27 +7,27 @@ blinker==1.8.2
 certifi==2020.6.20
 chardet==4.0.0
 click==8.1.7
-cloud-init==24.1.3
+#cloud-init==24.1.3
 colorama==0.4.4
-command-not-found==0.3
+#command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==3.4.8
 dbus-python==1.2.18
 distro==1.7.0
-distro-info==1.1+ubuntu0.2
+#distro-info==1.1+ubuntu0.2
 docker==5.0.3
 docker-compose==1.29.2
 dockerpty==0.4.1
 docopt==0.6.2
-ec2-hibinit-agent==1.0.0
-Flask
-Flask-SocketIO
+#ec2-hibinit-agent==1.0.0
+Flask==3.0.3
+Flask-SocketIO==5.3.6
 h11==0.14.0
-hibagent==1.0.1
+#hibagent==1.0.1
 httplib2==0.20.2
 hyperlink==21.0.0
-idna==3.3
+#idna==3.3
 importlib-metadata==4.6.4
 incremental==21.3.0
 itsdangerous==2.2.0
@@ -55,8 +55,8 @@ pyOpenSSL==21.0.0
 pyparsing==2.4.7
 pyrsistent==0.18.1
 pyserial==3.5
-python-apt==2.4.0+ubuntu3
-python-debian==0.1.43+ubuntu1.1
+#python-apt==2.4.0+ubuntu3
+#python-debian==0.1.43+ubuntu1.1
 python-dotenv==0.19.2
 python-engineio==4.9.1
 python-magic==0.4.24
@@ -68,20 +68,21 @@ SecretStorage==3.3.1
 service-identity==18.1.0
 simple-websocket==1.0.0
 six==1.16.0
-sos==4.5.6
+#sos==4.5.6
 ssh-import-id==5.11
-systemd-python==234
+#systemd-python==234
 texttable==1.6.4
 Twisted==22.1.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
+#ubuntu-pro-client==8001
+#ufw==0.36.1
+#unattended-upgrades==0.1
 urllib3==1.26.5
 wadllib==1.3.6
-websocket-client==1.2.3
+#websocket-client==1.2.3
 Werkzeug==3.0.3
 wsproto==1.2.0
 zipp==1.0.0
 zope.interface==5.4.0
-gunicorn
 pymysql
+gunicorn
+eventlet
