--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -21,5 +21,9 @@ RUN pip install -r requirements.txt
 # 앱 소스 복사
 COPY . /app
 
+# static 폴더에 권한 설정 추가
+RUN chmod -R 755 /app/static
+
+
 # Gunicorn을 사용해 Flask 앱 실행
 CMD ["gunicorn", "-w", "4", "-k", "eventlet", "-b", "0.0.0.0:8000", "app:app"]
