--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 upstream web_backend {
-    server web:8000;  # web 서비스가 실행되는 Docker Compose 네트워크에서의 이름과 포트
+    server 10.0.5.156:8000;  # web 서비스가 실행되는 Docker Compose 네트워크에서의 이름과 포트
 }
 
 server {
     listen 80;
-    server_name localhost;  # EC2의 퍼블릭 IP 또는 도메인
+    server_name my-alb-214461552.ap-northeast-2.elb.amazonaws.com;  
 
     location /socket.io/ {
         proxy_pass http://web_backend/socket.io/;
@@ -31,8 +31,9 @@ server {
     }
 
     location /static/ {
-        alias /app/static/;
+        proxy_pass http://10.0.5.156:8000/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
+
 }
