--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ upstream web_backend {
 
 server {
     listen 80;
-    server_name a32cbabbdddd94be695ee806211cc9ee-651141890.ap-northeast-2.elb.amazonaws.com;  
+    server_name http://abeb875347e23493d9e8760e4edf4f5c-1633944372.ap-northeast-2.elb.amazonaws.com;  
 
     location /socket.io/ {
         proxy_pass http://web_backend/socket.io/;
