--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,10 @@
 upstream web_backend {
-    server 10.0.5.39:8000;
-    server 10.0.5.99:8000;
+    server 172.20.193.180:8000;  # Flask 서비스의 Cluster IP와 포트를 사용
 }
 
 server {
     listen 80;
-    server_name http://abeb875347e23493d9e8760e4edf4f5c-1633944372.ap-northeast-2.elb.amazonaws.com;  
+    server_name abeb875347e23493d9e8760e4edf4f5c-1633944372.ap-northeast-2.elb.amazonaws.com;  
 
     location /socket.io/ {
         proxy_pass http://web_backend/socket.io/;
@@ -36,5 +35,4 @@ server {
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
-
 }
