--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_buffering off;
+        proxy_redirect off;
     }
 
     location / {
@@ -28,6 +29,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_buffering off;
+        proxy_redirect off;  # 리디렉션 제어 추가
     }
 
     location /static/ {
