--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,13 @@
-upstream web_backend {
-    server 172.20.193.180:8000;  # Flask 서비스의 Cluster IP와 포트를 사용
-}
-
 server {
     listen 80;
-    server_name Baggu-ALB-1934371412.ap-northeast-2.elb.amazonaws.com;  
+    server_name Baggu-ALB-1934371412.ap-northeast-2.elb.amazonaws.com;
 
-    location /socket.io/ {
-        proxy_pass http://web_backend/socket.io/;
+    # Default server block
+    location / {
+        proxy_pass http://172.20.193.180:8000;  # Flask 서비스의 Cluster IP와 포트를 사용
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,21 +16,22 @@ server {
         proxy_redirect off;
     }
 
-    location / {
-        proxy_pass http://web_backend;
+    # WebSockets
+    location /socket.io/ {
+        proxy_pass http://172.20.193.180:8000/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_buffering off;
-        proxy_redirect off;  # 리디렉션 제어 추가
     }
 
+    # Static content
     location /static/ {
-        proxy_pass http://web_backend/static/;
+        proxy_pass http://172.20.193.180:8000/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
