--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,11 @@ server {
     listen 80;
     server_name Baggu-ALB-1934371412.ap-northeast-2.elb.amazonaws.com;
 
-    # Default server block
     location / {
-        proxy_pass http://172.20.193.180:8000;  # Flask 서비스의 Cluster IP와 포트를 사용
+        proxy_pass http://172.20.193.180:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Connection "upgrade";  # 여기 수정
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,12 +15,11 @@ server {
         proxy_redirect off;
     }
 
-    # WebSockets
     location /socket.io/ {
         proxy_pass http://172.20.193.180:8000/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Connection "upgrade";  # 여기 수정
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +27,6 @@ server {
         proxy_buffering off;
     }
 
-    # Static content
     location /static/ {
         proxy_pass http://172.20.193.180:8000/static/;
         expires 30d;
