--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,4 +32,11 @@ server {
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
+
+    # Health check endpoint
+    location /healthz {
+        access_log off;
+        return 200 'OK';
+        add_header Content-Type text/plain;
+    }
 }
