--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name Baggu-ALB-1934371412.ap-northeast-2.elb.amazonaws.com;
+    server_name a45d12731770647fcb0ad41456560373-1556302801.ap-northeast-2.elb.amazonaws.com;  # Nginx 서비스의 LoadBalancer DNS
 
     location / {
-        proxy_pass http://172.20.193.180:8000;
+        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";  # 여기 수정
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,10 +16,10 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://172.20.193.180:8000/socket.io/;
+        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";  # 여기 수정
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,7 +28,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://172.20.193.180:8000/static/;
+        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
