--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name a45d12731770647fcb0ad41456560373-1556302801.ap-northeast-2.elb.amazonaws.com;  # Nginx 서비스의 LoadBalancer DNS
+    server_name k8s-nginx-webingre-a4b9012783-1483801203.ap-northeast-2.elb.amazonaws.com;
 
     location / {
-        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000;
+        proxy_pass http://flask-service:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -16,7 +16,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000/socket.io/;
+        proxy_pass http://flask-service:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -28,7 +28,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://afe2157d35c7d4de89db168f19f75d13-1888204399.ap-northeast-2.elb.amazonaws.com:8000/static/;
+        proxy_pass http://flask-service:8000;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
