--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name 217.83.162.1;
 
     location / {
-        proxy_pass 217.83.162.21:8000;
+        proxy_pass http://217.83.162.21:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -16,7 +16,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass 217.83.162.21:8000;
+        proxy_pass http://217.83.162.21:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -28,7 +28,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass 217.83.162.21:8000;
+        proxy_pass http://217.83.162.21:8000;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
