--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name 217.83.162.1;
+    server_name nginx-service.nginx.svc.cluster.local;
 
     location / {
-        proxy_pass http://217.83.162.21:8000;
+        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -16,7 +16,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://217.83.162.21:8000;
+        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -28,7 +28,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://217.83.162.21:8000;
+        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
