--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name nginx-service.nginx.svc.cluster.local;
 
+    resolver 10.96.0.10 valid=30s;  # DNS 서버 추가, IP는 클러스터 DNS 서버의 IP로 교체
+    resolver_timeout 5s;
+
     location / {
         proxy_pass http://flask-service.flask.svc.cluster.local:8000;
         proxy_http_version 1.1;
