--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,7 @@ server {
     resolver_timeout 5s;
 
     location / {
-        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
+        proxy_pass http://10.108.162.248:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -18,7 +18,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
+        proxy_pass http://10.108.162.248:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -30,7 +30,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://flask-service.flask.svc.cluster.local:8000;
+        proxy_pass http://10.108.162.248:8000;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
