--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen 80;
 
-    resolver 10.96.0.10 valid=30s;  # DNS 서버 추가, IP는 클러스터 DNS 서버의 IP로 교체
-    resolver_timeout 5s;
+    server_name 10.102.112.121;
 
     location / {
         proxy_pass http://10.108.162.248:8000;
