--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 217.83.162.110;  # 여기에 Ingress Controller의 External IP를 설정합니다.
+    server_name _;  # 여기에 Ingress Controller의 External IP를 설정합니다.
 
     location / {
         proxy_pass http://flask-service:8000;  # Flask 서비스의 클러스터 내 주소로 변경
