--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,8 @@
 server {
     listen 80;
-    server_name _;  # 여기에 Ingress Controller의 External IP를 설정합니다.
 
     location / {
-        proxy_pass http://flask-service:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -16,7 +15,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://flask-service:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -28,7 +27,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://flask-service:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
