--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,15 @@
 server {
     listen 80;
 
+    # Upstream을 변수화
+    set $upstream flask-service.default.svc.cluster.local:8000;
+
+    # DNS resolver 설정
+    resolver 10.96.0.10 valid=30s;  # Kubernetes의 클러스터 DNS IP로 변경
+    resolver_timeout 10s;
+
     location / {
-        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://$upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -15,7 +22,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://$upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -27,7 +34,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://flask-service.default.svc.cluster.local:8000;  # Flask 서비스의 클러스터 내 주소로 변경
+        proxy_pass http://$upstream;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
