--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,9 @@
 server {
     listen 80;
-
-    # Upstream을 변수화
-    set $upstream flask-service.default.svc.cluster.local:8000;
-
-    # DNS resolver 설정
-    resolver 10.96.0.10 valid=30s;  # Kubernetes의 클러스터 DNS IP로 변경
-    resolver_timeout 10s;
+    server_name 217.83.162.110;  # 여기에 server_name 추가
 
     location / {
-        proxy_pass http://$upstream;
+        proxy_pass http://flask-service:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -22,7 +16,7 @@ server {
     }
 
     location /socket.io/ {
-        proxy_pass http://$upstream;
+        proxy_pass http://flask-service:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -34,7 +28,7 @@ server {
     }
 
     location /static/ {
-        proxy_pass http://$upstream;
+        proxy_pass http://flask-service:8000;
         expires 30d;
         add_header Cache-Control "public, no-transform";
     }
