--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;  # 여기에 server_name 추가
+    server_name www.bagguzang2.com;  # 원래 _;
 
     location / {
         proxy_pass http://localhost:8000;
