--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,4 +38,9 @@ server {
         return 200 'OK';
         add_header Content-Type text/plain;
     }
+    location /healthy {
+    access_log off;
+    return 200 'OK';
+    add_header Content-Type text/plain;
+    }
 }
