--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,22 @@
 server {
     listen 80;
-    server_name _;  # 원래 _;
+    server_name bagguzang.r-e.kr;
+
+    # HTTP -> HTTPS 리디렉션
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name bagguzang.r-e.kr;
+
+    # SSL 인증서 경로 설정
+    ssl_certificate /etc/letsencrypt/live/bagguzang.r-e.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bagguzang.r-e.kr/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         proxy_pass http://localhost:8000;
@@ -38,9 +54,10 @@ server {
         return 200 'OK';
         add_header Content-Type text/plain;
     }
+
     location /healthy {
-    access_log off;
-    return 200 'OK';
-    add_header Content-Type text/plain;
+        access_log off;
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 }
